--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -100,3 +100,10 @@ body {
   transform: rotateX(-90deg) scaleX(0.9) translate3d(0, 10px, 0);
   transform-origin: bottom;
 }
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #000000;
+  color: #fff;
+}
